--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
 
-      - name: Set up Mill
-        run: chmod +x ./mill
-        
-      - name: formatCheck
-        run: ./mill mill.scalalib.scalafmt.ScalafmtModule/checkFormatAll __.sources
+      - name: PublishLocal
+        run: ./mill submod.publishLocal
+
+      - name: test
+        run: ./mill submod.inlineTests
