--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,10 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
 
-      - name: PublishLocal
+      - name: compile
         run: ./mill submod.compile
 
-      - name: PublishLocal
+      - name: run
         run: ./mill submod.run
 
       - name: test
